--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <audio autoplay loop>
   <source src="DARKHAAST.mp3" type="audio/mpeg">
 </audio>
+  
+  <div class="photos">
+  <img src="photo1.jpg">
+  <img src="photo2.jpg">
+  <img src="photo3.jpg">
+  <img src="photo4.jpg">
+    
+</div>
+
 
 <div class="container">
   <h1>Happy Birthday, My Love ❤️</h1>
