--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 
-<audio autoplay loop>
+<audio id="bg-music" loop>
   <source src="DARKHAAST.mp3" type="audio/mpeg">
 </audio>
+
+<button class="music-btn" onclick="playMusic()">
+  ❤️ Play Music
+</button>
+
   
   <div class="photos">
   <img src="photo1.jpg">
