--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   
   <div class="photos">
-  <img src="photo1.jpg">
-  <img src="photo2.jpg">
-  <img src="photo3.jpg">
-  <img src="photo4.jpg">
+  <img src="photo1.JPG">
+  <img src="photo2.JPG">
+  <img src="photo3.JPG">
+  <img src="photo4.JPG">
     
 </div>
 
