--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 
   
   <div class="photos">
-  <img src="photo1.JPG">
-  <img src="photo2.JPG">
-  <img src="photo3.JPG">
-  <img src="photo4.JPG">
+  <img src="images/photo1.JPG">
+  <img src="images/photo1.JPG">
+  <img src="images/photo1.JPG">
+  <img src="images/photo1.JPG">
+
+
     
 </div>
 
