--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   ❤️ Play Music
 </button>
 
-  
+
+
   <div class="photos">
-  <img src="images/photo1.JPG">
-  <img src="images/photo1.JPG">
-  <img src="images/photo1.JPG">
-  <img src="images/photo1.JPG">
+  <img src="photo1.JPG" alt="Photo 1">
+  <img src="photo2.JPG" alt="Photo 2">
+  <img src="photo3.JPG" alt="Photo 3">
+  <img src="photo4.JPG" alt="Photo 4">
+</div>
+
 
 
     
