--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
   <p class="signature">
     — Forever Yours
+    <p>Scroll down…</p>
+<p style="display:none;" id="hidden-msg">I love you ❤️ forever</p>
+
   </p>
 </div>
 
