--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
   <button class="music-btn" onclick="playMusic()">❤️ Play Music</button>
 
   <div class="photos">
-    <img src="images/photo1.jpg" alt="Photo 1" />
-    <img src="images/photo2.jpg" alt="Photo 2" />
-    <img src="images/photo3.jpg" alt="Photo 3" />
-    <img src="images/photo4.jpg" alt="Photo 4" />
-    <img src="images/photo5.jpg" alt="Photo 5" />
-    <img src="images/photo6.jpg" alt="Photo 6" />
-    <img src="images/photo7.jpg" alt="Photo 7" />
-    <img src="images/photo8.jpg" alt="Photo 8" />
-    <img src="images/photo9.jpg" alt="Photo 9" />
-    <img src="images/photo10.jpg" alt="Photo 10" />
-    <img src="images/photo11.jpg" alt="Photo 11" />
-    <img src="images/photo12.jpg" alt="Photo 12" />
-    <img src="images/photo13.jpg" alt="Photo 13" />
-    <img src="images/photo14.jpg" alt="Photo 14" />
-    <img src="images/photo15.jpg" alt="Photo 15" />
-    <img src="images/photo16.jpg" alt="Photo 16" />
-    <img src="images/photo17.jpg" alt="Photo 17" />
-    <img src="images/photo18.jpg" alt="Photo 18" />
-    <img src="images/photo19.jpg" alt="Photo 19" />
-    <img src="images/photo20.jpg" alt="Photo 20" />
-    <img src="images/photo21.jpg" alt="Photo 21" />
-    <img src="images/photo22.jpg" alt="Photo 22" />
-    <img src="images/photo23.jpg" alt="Photo 23" />
-    <img src="images/photo24.jpg" alt="Photo 24" />
-    <img src="images/photo25.jpg" alt="Photo 25" />
-    <img src="images/photo26.jpg" alt="Photo 26" />
-    <img src="images/photo27.jpg" alt="Photo 27" />
-    <img src="images/photo28.jpg" alt="Photo 28" />
-    <img src="images/photo29.jpg" alt="Photo 29" />
-    <img src="images/photo30.jpg" alt="Photo 30" />
+    <img src="images/photo1.JPG" alt="Photo 1" />
+    <img src="images/photo2.JPG" alt="Photo 2" />
+    <img src="images/photo3.JPG" alt="Photo 3" />
+    <img src="images/photo4.JPG" alt="Photo 4" />
+    <img src="images/photo5.JPG" alt="Photo 5" />
+    <img src="images/photo6.JPG" alt="Photo 6" />
+    <img src="images/photo7.JPG" alt="Photo 7" />
+    <img src="images/photo8.JPG" alt="Photo 8" />
+    <img src="images/photo9.JPG" alt="Photo 9" />
+    <img src="images/photo10.JPG" alt="Photo 10" />
+    <img src="images/photo11.JPG" alt="Photo 11" />
+    <img src="images/photo12.JPG" alt="Photo 12" />
+    <img src="images/photo13.JPG" alt="Photo 13" />
+    <img src="images/photo14.JPG" alt="Photo 14" />
+    <img src="images/photo15.JPG" alt="Photo 15" />
+    <img src="images/photo16.JPG" alt="Photo 16" />
+    <img src="images/photo17.JPG" alt="Photo 17" />
+    <img src="images/photo18.JPG" alt="Photo 18" />
+    <img src="images/photo19.JPG" alt="Photo 19" />
+    <img src="images/photo20.JPG" alt="Photo 20" />
+    <img src="images/photo21.JPG" alt="Photo 21" />
+    <img src="images/photo22.JPG" alt="Photo 22" />
+    <img src="images/photo23.JPG" alt="Photo 23" />
+    <img src="images/photo24.JPG" alt="Photo 24" />
+    <img src="images/photo25.JPG" alt="Photo 25" />
+    <img src="images/photo26.JPG" alt="Photo 26" />
+    <img src="images/photo27.JPG" alt="Photo 27" />
+    <img src="images/photo28.JPG" alt="Photo 28" />
+    <img src="images/photo29.JPG" alt="Photo 29" />
+    <img src="images/photo30.JPG" alt="Photo 30" />
   </div>
 
   
