--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button class="music-btn" onclick="playMusic()">❤️ Play Music</button>
 
   <div class="photos">
-    <img src="images/photo1.JPG" alt="Photo 1" />
+    <img src="photo1.JPG" alt="Photo 1" />
     <img src="images/photo2.JPG" alt="Photo 2" />
     <img src="images/photo3.JPG" alt="Photo 3" />
     <img src="images/photo4.JPG" alt="Photo 4" />
