--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 
   <div class="photos">
     <img src="photo1.JPG" alt="Photo 1" />
-    <img src="images/photo2.JPG" alt="Photo 2" />
-    <img src="images/photo3.JPG" alt="Photo 3" />
-    <img src="images/photo4.JPG" alt="Photo 4" />
-    <img src="images/photo5.JPG" alt="Photo 5" />
-    <img src="images/photo6.JPG" alt="Photo 6" />
-    <img src="images/photo7.JPG" alt="Photo 7" />
-    <img src="images/photo8.JPG" alt="Photo 8" />
-    <img src="images/photo9.JPG" alt="Photo 9" />
-    <img src="images/photo10.JPG" alt="Photo 10" />
-    <img src="images/photo11.JPG" alt="Photo 11" />
-    <img src="images/photo12.JPG" alt="Photo 12" />
-    <img src="images/photo13.JPG" alt="Photo 13" />
-    <img src="images/photo14.JPG" alt="Photo 14" />
-    <img src="images/photo15.JPG" alt="Photo 15" />
-    <img src="images/photo16.JPG" alt="Photo 16" />
-    <img src="images/photo17.JPG" alt="Photo 17" />
-    <img src="images/photo18.JPG" alt="Photo 18" />
-    <img src="images/photo19.JPG" alt="Photo 19" />
-    <img src="images/photo20.JPG" alt="Photo 20" />
-    <img src="images/photo21.JPG" alt="Photo 21" />
-    <img src="images/photo22.JPG" alt="Photo 22" />
-    <img src="images/photo23.JPG" alt="Photo 23" />
-    <img src="images/photo24.JPG" alt="Photo 24" />
-    <img src="images/photo25.JPG" alt="Photo 25" />
-    <img src="images/photo26.JPG" alt="Photo 26" />
-    <img src="images/photo27.JPG" alt="Photo 27" />
-    <img src="images/photo28.JPG" alt="Photo 28" />
-    <img src="images/photo29.JPG" alt="Photo 29" />
-    <img src="images/photo30.JPG" alt="Photo 30" />
+    <img src="photo2.JPG" alt="Photo 2" />
+    <img src="photo3.JPG" alt="Photo 3" />
+    <img src="photo4.JPG" alt="Photo 4" />
+    <img src="photo5.JPG" alt="Photo 5" />
+    <img src="photo6.JPG" alt="Photo 6" />
+    <img src="photo7.JPG" alt="Photo 7" />
+    <img src="photo8.JPG" alt="Photo 8" />
+    <img src="photo9.JPG" alt="Photo 9" />
+    <img src="photo10.JPG" alt="Photo 10" />
+    <img src="photo11.JPG" alt="Photo 11" />
+    <img src="photo12.JPG" alt="Photo 12" />
+    <img src="photo13.JPG" alt="Photo 13" />
+    <img src="photo14.JPG" alt="Photo 14" />
+    <img src="photo15.JPG" alt="Photo 15" />
+    <img src="photo16.JPG" alt="Photo 16" />
+    <img src="photo17.JPG" alt="Photo 17" />
+    <img src="photo18.JPG" alt="Photo 18" />
+    <img src="photo19.JPG" alt="Photo 19" />
+    <img src="photo20.JPG" alt="Photo 20" />
+    <img src="photo21.JPG" alt="Photo 21" />
+    <img src="photo22.JPG" alt="Photo 22" />
+    <img src="photo23.JPG" alt="Photo 23" />
+    <img src="photo24.JPG" alt="Photo 24" />
+    <img src="photo25.JPG" alt="Photo 25" />
+    <img src="photo26.JPG" alt="Photo 26" />
+    <img src="photo27.JPG" alt="Photo 27" />
+    <img src="photo28.JPG" alt="Photo 28" />
+    <img src="photo29.JPG" alt="Photo 29" />
+    <img src="photo30.JPG" alt="Photo 30" />
   </div>
 
   
