--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
     <img src="photo26.JPG" alt="Photo 26" />
     <img src="photo27.JPG" alt="Photo 27" />
     <img src="photo28.JPG" alt="Photo 28" />
-    <img src="photo29.JPG" alt="Photo 29" />
-    <img src="photo30.JPG" alt="Photo 30" />
   </div>
 
   
@@ -57,6 +55,11 @@
 
     <p class="signature">— Forever Yours</p>
   </div>
+  
+  <div class="photos">
+  <img src="photo28.JPG" alt="Photo 28" />
+
+    
 
   <!-- JS to play music -->
   <script>
