--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Audio -->
   <audio id="bg-music" loop>
-    <source src="Ye Tune Kya Kiya - Javed Bashir - BossMobi.Com.Se.mp3" type="audio/mpeg" />
+    <source src="tune.mp3" type="audio/mpeg" />
   </audio>
   <button class="music-btn" onclick="playMusic()">❤️ Play Music</button>
 
